# little_engine

./: CMakeLists.txt
Core/: CMakeLists.txt  CMakePresets.json  Core.cpp  Main.cpp
Core/Node/: CMakeLists.txt  Character.cpp  Character.h  Node.h
Core/Node/Implementation/: Character.cpp
Core/Node/include/: Board.hpp  Character.hpp  Node.hpp
Core/Node/src/: Character.cpp
Core/Utils/: Utils.h
Core/Utils/Implementation/: Utils.cpp
Utils/Macros/: CMakeLists.txt  Macros.hpp
